@@ -26,6 +26,7 @@ import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.gravitee.definition.model.Plan;
 import io.gravitee.definition.model.PolicyScope;
+import io.gravitee.definition.model.debug.DebugApiV2;
 import io.gravitee.definition.model.v4.plan.PlanStatus;
 import io.gravitee.gateway.api.Request;
 import io.gravitee.gateway.api.buffer.Buffer;
@@ -49,7 +50,6 @@ import io.vertx.core.Promise;
 import io.vertx.core.Vertx;
 import io.vertx.core.impl.future.PromiseImpl;
 import java.util.*;
-import java.util.concurrent.Callable;
 import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -102,7 +102,7 @@ class DebugEventCompletionProcessorTest {
             .when(vertx)
             .executeBlocking(any(Handler.class), any());
 
-        io.gravitee.definition.model.debug.DebugApi definition = new io.gravitee.definition.model.debug.DebugApi();
+        DebugApiV2 definition = new DebugApiV2();
         definition.setPlans(
             Arrays.asList(plan(PlanStatus.STAGING), plan(PlanStatus.PUBLISHED), plan(PlanStatus.DEPRECATED), plan(PlanStatus.CLOSED))
         );
@@ -260,21 +260,16 @@ class DebugEventCompletionProcessorTest {
 
         final Map<String, List<String>> result = cut.convertHeaders(headers);
 
-        assertThat(result.get("transfer-encoding")).hasSize(1);
-        assertThat(result.get("transfer-encoding")).contains("chunked");
-        assertThat(result.get("X-Gravitee-Transaction-Id")).hasSize(1);
-        assertThat(result.get("X-Gravitee-Transaction-Id")).contains("transaction-id");
-        assertThat(result.get("content-type")).hasSize(1);
-        assertThat(result.get("content-type")).contains("application/json");
-        assertThat(result.get("X-Gravitee-Request-Id")).hasSize(1);
-        assertThat(result.get("X-Gravitee-Request-Id")).contains("request-id");
-        assertThat(result.get("accept-encoding")).hasSize(3);
-        assertThat(result.get("accept-encoding")).contains("deflate", "gzip", "compress");
+        assertThat(result.get("transfer-encoding")).hasSize(1).contains("chunked");
+        assertThat(result.get("X-Gravitee-Transaction-Id")).hasSize(1).contains("transaction-id");
+        assertThat(result.get("content-type")).hasSize(1).contains("application/json");
+        assertThat(result.get("X-Gravitee-Request-Id")).hasSize(1).contains("request-id");
+        assertThat(result.get("accept-encoding")).hasSize(3).contains("deflate", "gzip", "compress");
     }
 
     @Test
     void shouldConvertDebugApi() {
-        final io.gravitee.definition.model.debug.DebugApi debugApiConverted = cut.convert(debugApi);
+        final DebugApiV2 debugApiConverted = cut.convert(debugApi);
 
         assertNotEquals(debugApiConverted.getPlans().size(), debugApi.getDefinition().getPlans().size());
 
@@ -282,7 +277,7 @@ class DebugEventCompletionProcessorTest {
             .getPlans()
             .stream()
             .filter(plan -> PlanStatus.CLOSED.getLabel().equalsIgnoreCase(plan.getStatus()))
-            .collect(Collectors.toList());
+            .toList();
 
         assertEquals(0, unexpectedPlans.size());
     }
